@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 1.2-14
-Date: 2018-04-08
+Version: 1.2-15
+Date: 2018-08-20
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Contact: Doug and Martin <Matrix-authors@R-project.org>
